--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,9 +145,6 @@ section {
 /* Hero Style End */
 
 /* What We Do Syle */
-.intro {
-    text-align: center;
-}
 
 .intro p {
     line-height: 1.7;
@@ -155,11 +152,11 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 /*  What You Do Style */
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -190,10 +187,11 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -206,7 +204,7 @@ section {
 
 /* Meet The Trainers Style */
 .trainers {
-    text-align: center;
+
 }
 
 .trainer {
@@ -244,18 +242,9 @@ section {
     line-height: 1.3;
 }
 
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
 /* Reach Out Style */
 .contact {
     background: #024e76;
-    text-align: center;
 }
 
 .contact h2 {
@@ -290,4 +279,16 @@ section {
 
 .contact-info a {
     color: #fce138;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.flex-row {
+    display: flex;
 }
