--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,12 @@
 }
 
 body {
-    /* more on this crazy alphanumerical value in a minute! */
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
 }
 
 /* apply styles to <header> */
+
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
@@ -78,6 +78,7 @@ section {
 }
 
 /* Hero Style Start */
+
 .hero {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
@@ -156,32 +157,57 @@ section {
 }
 
 /*  What You Do Style */
+
+.step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width:80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .steps {
     background: #fce138;
 }
 
-.steps div {
-    margin-bottom: 80px;
-}
-
-.steps img {
-    width: 15%;
-    margin: 10px 0;
-}
-
-.steps h3 {
+.step h3 {
     color: #024e76;
     font-size: 46px;
-    margin-top: 10px;
+    flex: 1 30%;
 }
 
-.steps p {
+.step-text {
+    flex: 12;
+}
+
+.step-text p {
     color: #39a6b2;
-    font-size: 23px;
+    font-size: 18px;
 }
 
-.steps span {
-    font-size: 38px;
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color:#024e76;
+}
+
+.step-info {
+    flex:  2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+
+.step-img img {
+    max-width: 100%;
 }
 
 .section-title {
@@ -203,9 +229,7 @@ section {
 }
 
 /* Meet The Trainers Style */
-.trainers {
 
-}
 
 .trainer {
     width: 900px;
